[project]
name = "stream-writer-multi"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [ "aiofiles>=24.1.0", "httpx>=0.28.1", "loguru>=0.7.3", "pydantic-settings>=2.10.1", "rich>=14.0.0", "tenacity>=9.1.2", "typer>=0.16.0",]

[dependency-groups]
dev = [ "black>=25.1.0", "isort>=6.0.1", "pyproject-flake8>=7.0.0", "pytest>=8.4.1", "ruff>=0.12.3",]

[tool.ruff]
exclude = [ "build", "dist",]

[tool.pytest.ini_options]
pythonpath = [ ".",]
